force-app/main/default/objects/sc_ext__Field_Interaction__c/fields/sc_ext__Details__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Details__c</fullName>
    <label>Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>