force-app/main/default/objects/sc_ext__Field_Interaction__c/fields/sc_ext__Deterministic__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Deterministic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deterministic</label>
    <type>Checkbox</type>
</CustomField>