force-app/main/default/objects/sc_ext__Field_Interaction__c/fields/sc_ext__Durable_Id__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Durable_Id__c</fullName>
    <label>Durable Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>