force-app/main/default/objects/sc_ext__Field_Interaction__c/fields/sc_ext__Errors__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Errors__c</fullName>
    <label>Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>