force-app/main/default/objects/sc_ext__Field_Interaction__c/fields/sc_ext__Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>