force-app/main/default/objects/sc_ext__Field_Interaction__c/fields/sc_ext__Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Initiated_Date__c</fullName>
    <label>Initiated Date</label>
    <type>DateTime</type>
</CustomField>