force-app/main/default/objects/sc_ext__Field_Interaction__c/fields/sc_ext__Type__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Encryption Request</fullName>
            </value>
            <value>
                <fullName>Apex Parsing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>